Fix overflow-y

--- a/static/terraboard.css
+++ b/static/terraboard.css
@@ -26,14 +26,22 @@
     overflow: hidden;
     height:100%;
   }
+  #maincont, #leftcol .panel-group {
+    overflow: hidden;
+    height:100%;
+  }
   #nodes, #node {
     overflow-y: auto;
   }
   #nodes {
-    height: calc(100% - 310px);
+    max-height: calc(100% - 310px);
   }
   #node {
     height: 100%;
+  }
+  #reports-list {
+    overflow-y: auto;
+    max-height: 70vh;
   }
 }
 
